--- a/assets/scss/modules/_variables.scss
+++ b/assets/scss/modules/_variables.scss
@@ -8,11 +8,11 @@ $gray-light            : #ddd;
 $gray-lighter          : #eee;
 $gray-lightest         : #f8f8f8;
 
-$slate-white           : #F6F4E9;
+$slate-white           : #FFFFFF;
 $red                   : #7C221A;
 $brown                 : #85715F;
 $slate-gray            : #39424B;
-$slate-green           : #56817A;
+$slate-green           : #3498db;
 $midnight-blue         : #222F38;
 
 $primary-color         : $slate-green;
