--- a/amp.hbs
+++ b/amp.hbs
@@ -607,7 +607,7 @@
             box-sizing: border-box;
             width: 100%;
             height: 50px;
-            background: #56817A no-repeat center center;
+            background: #3498db no-repeat center center;
             background-size: cover;
             text-align: left;
 
