--- a/assets/scss/modules/_variables.scss
+++ b/assets/scss/modules/_variables.scss
@@ -51,6 +51,13 @@ $margin-h4             : $margin-h3 * 0.8;
 $margin-h5             : $margin-h4 * 0.8;
 $margin-h6             : $margin-h5 * 0.8;
 
+$margin-bot-h1             : $margin-h1 * 0.3;
+$margin-bot-h2             : $margin-h2 * 0.3;
+$margin-bot-h3             : $margin-h2 * 0.3;
+$margin-bot-h4             : $margin-h3 * 0.3;
+$margin-bot-h5             : $margin-h4 * 0.3;
+$margin-bot-h6             : $margin-h5 * 0.3;
+
 $font-title            : $unit * 2;
 $font-h1               : $font-title * 1.1;
 $font-h2               : $font-title * 0.85;
